revisited-js-api-calls

--- a/app/src/main/res/values/credentials.xml
+++ b/app/src/main/res/values/credentials.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="CLIENT_ID">XXXXXXXX</string>
-    <string name="CLIENT_SECRET">YYYYYYYY</string>
+    <string name="CLIENT_ID">GYH06Gcdb5y4F0gShcQtPKWBZLEoS3KOahaXl2Sw</string>
+    <string name="CLIENT_SECRET">niXrBGjPygtKOUSuiusUepAfzT2N19QFw8HL7twmON7iVrxDPRATaPsybEWfGZ8RIXFrbl6pdUhS6qZvSZNehyqCDKkckR7xLmTE6TM4Q8oarKuXJh25fNLCmUXhoOwc</string>
 </resources>
