--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,18 +2,22 @@
     <!-- Base application theme. -->
     <style name="Theme.AndroidWebViewSample" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
+        <item name="colorPrimary">@color/avatar_sdk_violet</item>
+        <item name="colorPrimaryVariant">@color/avatar_sdk_violet</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
+        <item name="colorSecondary">@color/avatar_sdk_orange</item>
+        <item name="colorSecondaryVariant">@color/avatar_sdk_orange</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+        <item name="android:windowBackground">@color/avatar_sdk_violet</item>
     </style>
-
+    <style name="Theme.AndroidWebViewSample.Button.Orange" parent="ThemeOverlay.AppCompat">
+        <item name="android:background">@drawable/rounded_shape</item>
+        <item name="android:backgroundTint">@color/avatar_sdk_orange</item>
+    </style>
     <style name="Theme.AndroidWebViewSample.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
