--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,21 +6,6 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <com.google.android.material.appbar.AppBarLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:theme="@style/Theme.AndroidWebViewSample.AppBarOverlay">
-
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            app:popupTheme="@style/Theme.AndroidWebViewSample.PopupOverlay" />
-
-    </com.google.android.material.appbar.AppBarLayout>
-
-
     <LinearLayout android:id="@+id/RelativeLayout01"
         android:layout_width="fill_parent"
         android:orientation="vertical"
@@ -30,17 +15,18 @@
         android:layout_height="fill_parent">
         <ImageView
             android:layout_width="300dp"
-            android:layout_height="80dp"
+            android:layout_height="90dp"
             android:layout_centerInParent="true"
             android:src="@drawable/logo_white"
             />
         <android.widget.Button
             android:id="@+id/watch_tutorial"
             android:layout_width="300dp"
-            android:layout_height="80dp"
+            android:layout_height="70dp"
             android:textColor="@color/white"
             android:textSize="9pt"
             android:textStyle=""
+            android:layout_marginTop="20dp"
             android:layout_centerInParent="true"
             android:text="@string/watch_tutorial"
             android:background="@drawable/rounded_shape"
@@ -49,7 +35,7 @@
         <android.widget.Button
             android:id="@+id/create_button"
             android:layout_width="300dp"
-            android:layout_height="80dp"
+            android:layout_height="70dp"
             android:textSize="9pt"
             android:textColor="@color/white"
             android:layout_centerInParent="true"
